[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-quant"
dynamic = ["version"]
authors = [{ name = "gnzsnz" }]
description = "Jupyter quant research environment. "
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE.txt" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "alphalens-reloaded==0.4.6",
    "arch==7.2.0",
    "black==25.9.0",
    "bottleneck==1.6.0",
    "dask[dataframe,distributed]==2025.10.0",
    "empyrical-reloaded==0.5.12",
    "exchange_calendars==4.11.2",
    "h5py==3.15.0",
    "hurst==0.0.5",
    "ib-fundamental==0.0.5",
    "ib_async==1.0.3",
    "ipympl==0.9.8",
    "ipywidgets==8.1.7",
    "isort==7.0.0",
    "jedi-language-server==0.45.1",
    "jupyterlab==4.4.9",
    "jupyterlab-lsp==5.2.0",
    "jupyterlab_code_formatter==3.0.2",
    "jupyterlab_widgets==3.0.15",
    "lightgbm==4.6.0",
    "matplotlib==3.10.7",
    "numba==0.62.1",
    "numexpr==2.14.1",
    "numpy==2.2.6",
    "optuna==4.5.0",
    "pandas==2.3.3",
    "patsy==1.0.1",
    "pip==25.2",
    "py_vollib==1.0.1",
    "py_vollib_vectorized==0.1.1",
    "pyarrow==21.0.0",
    "pyfolio-reloaded==0.9.9",
    "pykalman==0.10.2",
    "PyPortfolioOpt==1.5.6",
    "quantstats-lumi==1.0.1",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "sdepy==1.2.0",
    "seaborn==0.13.2",
    "shap==0.49.1",
    "statsmodels==0.14.5",
    "TA-Lib==0.6.4",
    "tzdata==2025.2",
    "yellowbrick==1.5",
    "yfinance==0.2.66",
    "zipline-reloaded==3.1.1",
]

[project.optional-dependencies]
sk-util = ["skfolio==0.14.1", "sktime==0.39.0"]
bayes = [
    "arviz==0.22.0",
    "pymc==5.26.0",
    "formulae==0.5.4",
    "graphviz==0.21",
]
dev = ["pre-commit>=3.7.1", "build", "wheel", "twine"]

[project.urls]
"Homepage" = "https://github.com/quantbelt/jupyter-quant"
"Bug Tracker" = "https://github.com/quantbelt/jupyter-quant/issues"

[tool.setuptools]
packages = ["jupyter_quant"]

[tool.setuptools.dynamic]
version = {attr = "jupyter_quant.__version__"}
