[build-system]
requires = ["setuptools>=61.0","setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-quant"
dynamic = ["version"]
authors = [{ name = "gnzsnz" }]
description = "Jupyter quant research environment. "
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE.txt" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "alphalens-reloaded==0.4.6",
    "arch==8.0.0",
    "black==25.12.0",
    "bottleneck==1.6.0",
    "dask[dataframe,distributed]==2025.12.0",
    "empyrical-reloaded==0.5.12",
    "exchange_calendars==4.12",
    "h5py==3.15.1",
    "hurst==0.0.5",
    "ib-fundamental==0.0.5",
    "ib_async==2.1.0",
    "ipympl==0.9.8",
    "ipywidgets==8.1.8",
    "isort==7.0.0",
    "jedi-language-server==0.46.0",
    "jupyterlab==4.5.2",
    "jupyterlab-lsp==5.2.0",
    "jupyterlab_code_formatter==3.0.2",
    "jupyterlab_widgets==3.0.16",
    "lightgbm==4.6.0",
    "matplotlib==3.10.8",
    "numba==0.63.1",
    "numexpr==2.14.1",
    "numpy==2.3.5",
    "optuna==4.6.0",
    "pandas==2.3.3",
    "patsy==1.0.2",
    "pip==25.3",
    "py_vollib==1.0.1",
    "py_vollib_vectorized==0.1.1",
    "pyarrow==22.0.0",
    "pyfolio-reloaded==0.9.9",
    "pykalman==0.11.1",
    "PyPortfolioOpt==1.5.6",
    "quantstats-lumi==1.1.0",
    "scikit-learn==1.7.2",
    "scipy==1.17.0",
    "sdepy==1.2.0",
    "seaborn==0.13.2",
    "shap==0.49.1",
    "statsmodels==0.14.6",
    "TA-Lib==0.6.8",
    "tzdata==2025.3",
    "yellowbrick==1.5",
    "yfinance==1.0",
    "zipline-reloaded==3.1.1",
]

[project.optional-dependencies]
sk-util = ["skfolio==0.15.3", "sktime==0.40.1"]
bayes = [
    "arviz==0.23.0",
    "bambi==0.16.0",
    "pymc==5.27.0",
    "formulae==0.5.4",
    "graphviz==0.21",
]
dev = ["pre-commit>=3.7.1", "build", "wheel", "twine", "setuptools-scm"]

[project.urls]
"Homepage" = "https://github.com/quantbelt/jupyter-quant"
"Bug Tracker" = "https://github.com/quantbelt/jupyter-quant/issues"

[tool.setuptools]
packages = ["jupyter_quant"]

[tool.setuptools_scm]
# setuptools_scm placeholder
